# CZap

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h
ASTNodes/: ASTNode.cpp  ASTNode.h  BinaryExpression.cpp  BinaryExpression.h  BooleanExpression.cpp  BooleanExpression.h  BooleanLiteral.cpp  BooleanLiteral.h  Expression.cpp  Expression.h  FunctionCall.cpp  FunctionCall.h  Identifier.cpp  Identifier.h  NumberLiteral.cpp  NumberLiteral.h  OutputStatement.cpp  OutputStatement.h  RequestStatement.cpp  RequestStatement.h  Statement.cpp  Statement.h  StringLiteral.cpp  StringLiteral.h  VarDeclaration.cpp  VarDeclaration.h  VarReassignment.cpp  VarReassignment.h
Environment/: Environment.cpp  Environment.h
Tokens/: Token.cpp  Token.h
src/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Parser.cpp  Parser.h  main.cpp
src/ASTNodes/: ASTNode.cpp  ASTNode.h  AssertStatement.cpp  AssertStatement.h  BinaryExpression.cpp  BinaryExpression.h  BooleanExpression.cpp  BooleanExpression.h  BooleanLiteral.cpp  BooleanLiteral.h  BreakStatement.cpp  BreakStatement.h  Expression.h  ExpressionStatement.h  ForeachLoop.cpp  ForeachLoop.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  Identifier.cpp  Identifier.h  IfStatement.cpp  IfStatement.h  NumberLiteral.h  OutputStatement.h  RequestStatement.cpp  RequestStatement.h  Statement.h  StringLiteral.h  VarDeclaration.cpp  VarDeclaration.h  WhileLoop.cpp  WhileLoop.h
src/Helpers/: Value.h
src/Tokens/: Token.cpp
